<resources>
    <string name="app_name">LinarcTestApp</string>
    <string name="saved_successfully">Data Saved Successfully</string>
    <string name="enter_values">User Name is mandatory</string>
    <string name="image_mime_type">image/*</string>
    <string name="get_users">getUsers</string>
    <string name="delete_user">deleteUser</string>
    <string name="_id">id</string>
    <string name="name">Name</string>
    <string name="small_name">name</string>
    <string name="address">Address</string>
    <string name="small_address">address</string>
    <string name="mobile">Mobile No</string>
    <string name="phone">phone</string>
    <string name="signature">signature</string>
    <string name="profilePic">profilePic</string>
    <string name="insert">Insert</string>
    <string name="navigate">Navigate</string>
    <string name="user_not_found">User not found</string>
    <string name="shared_image_">shared_image_</string>
    <string name="user_signature_">user_signature_</string>
    <string name="signature_saved">Signature saved</string>
    <string name="failed_to_save_signature">Failed to save signature</string>
    <string name="image">image_</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload_profile_picture">Upload profile picture</string>
    <string name="camera_permission_denied">Camera permission denied</string>
    <string name="user_photo">user_photo_</string>
</resources>