<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EntryActivity">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/uploadSIV"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_margin="80dp"
        android:padding="5dp"
        android:background="@drawable/person_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/CircleImageView"
        app:strokeColor="@android:color/black"
        app:strokeWidth="2dp" />

    <ImageView
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:contentDescription="@string/image"
        android:src="@drawable/baseline_edit"
        app:layout_constraintBottom_toBottomOf="@+id/uploadSIV"
        app:layout_constraintEnd_toEndOf="@+id/uploadSIV" />

    <EditText
        android:id="@+id/nameET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="60dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_border"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/uploadSIV" />

    <EditText
        android:id="@+id/addressET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_border"
        android:hint="@string/address"
        android:inputType="textPostalAddress"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameET" />

    <EditText
        android:id="@+id/mobileET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_border"
        android:hint="@string/mobile"
        android:inputType="phone"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addressET" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/clickMeBtn"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/insert"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/navMeBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mobileET" />

    <Button
        android:id="@+id/signBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signature"
        android:textAllCaps="false"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mobileET" />

    <ImageView
        android:id="@+id/viewSignIV"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:contentDescription="@string/signature"
        android:paddingHorizontal="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/signBtn"
        app:layout_constraintStart_toEndOf="@+id/signBtn"
        app:layout_constraintTop_toTopOf="@+id/signBtn" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/navMeBtn"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/navigate"
        android:textAllCaps="false"
        app:layout_constraintStart_toEndOf="@id/clickMeBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mobileET" />

</androidx.constraintlayout.widget.ConstraintLayout>